2014-09-17  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/sys/features.h: Add __NEWLIB__ and
	__NEWLIB_MINOR__ macros.

2014-09-17  Joel Sherrill <joel.sherrill@oarcorp.com>
	    Thomas Uhle <thomas.uhle@eas.iis.fraunhofer.de>

	* libc/include/string.h: Correct guard for strnlen().

2014-09-15  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/time/month_lengths.c: Fix to define __month_lengths.

2014-09-12  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/time/tzcalc_limits.c: Fix __month_lengths reference.

2014-09-12  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/time/month_lengths.c: Actually add file this time.
	* libc/time/tzcalc_limits.c: Ditto.

2014-09-11  Freddie Chopin  <freddie_chopin@op.pl>

	* libc/time/month_lengths.c: New file with __month_lengths array
	(previously mon_lengths array in mktm_r.c)
	* libc/time/tzcalc_limits.c: New file with __tzcalc_limits() from
	mktm_r.c
	* libc/time/lcltime_r.c (localtime_r): Simplify by changing call to
	_mktm_r() with call to gmtime_r() and code moved from _mktm_r() which
	was used to do time zone adjustments
	* libc/time/gmtime_r.c (gmtime_r): Simplify by moving all relevant
	code from _mktm_r(), breaking all dependencies on time zone related
	functions
	* libc/time/mktm_r.c: Delete file
	* libc/time/local.h: Update accordingly - remove declaration of
	_mktm_r(), add declaration of __month_lengths[]
	* libc/time/Makefile.am: Modify accordingly.
	* libc/time/Makefile.in: Regenerate.

2014-09-08  Freddie Chopin  <freddie_chopin@op.pl>

	* libc/machine/arm/Makefile.am: Fix typo.
	* libc/machine/arm/Makefile.in: Regenerated.

2014-09-05  Hale Wang  <hale.wang@arm.com>

	* libc/machine/arm/memchr.S: Clean up the wrapper.
	* libc/machine/arm/memcpy.S: Likewise.
	* libc/machine/arm/memchr-stub.c: Delete this redundant file.
	* libc/machine/arm/memcpy-stub.c: Likewise.
	* libc/machine/arm/strcmp.S: Add speed-preferred wrapper.
	* libc/machine/arm/strlen.S: Likewise.
	* libc/machine/arm/Makefile.am: Add dependencies.